--- a/hs-gen-iface/hs-gen-iface.cabal
+++ b/hs-gen-iface/hs-gen-iface.cabal
@@ -2,8 +2,8 @@ Name:                   hs-gen-iface
 Version:                0.5.0
 License:                MIT
 License-file:           LICENSE
-Author:                 Roman Cheplyaka
-Maintainer:             Roman Cheplyaka <roma@ro-che.info>
+Author:                 Philipp Schuster, Roman Cheplyaka
+Maintainer:             Philipp Schuster
 Description:            Compiler which generates module interfaces for haskell-names
 Category:               Language
 Synopsis:               Utility to generate haskell-names interface files
